styles.css
:root {
  --orange-bg: hsl(26, 100%, 55%);
  --dark-blue: hsl(220, 13%, 13%);
  --dark-gray-blue: hsl(219, 9%, 45%);
  --grayish-blue: hsl(220, 14%, 75%);
  --light-grayish-blue: hsl(223, 64%, 98%);
  --white: hsl(0, 0%, 100%);
  --semi-black-bg: hsla(0, 0%, 0%, 75%);
  --font-family: "Kumbh Sans";
}

body {
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  display: flex;
  flex-direction: column;
  align-items: center;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: var(--font-family);
}

a {
  text-decoration: none;
  color: var(--grayish-blue);
}

input {
  background: none;
  outline: none;
  border: none;
  text-align: center;
  font-weight: 600;
  font-size: 16px;
  font-family: inherit;
  color: inherit;
}

button {
  background: transparent;
  outline: none;
  border: none;
  cursor: pointer;
}

header {
  width: 70vw;
  height: 120px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background: var(--white);
  border-bottom: 1px solid var(--grayish-blue);
}

.logo-and-nav,
.cart-and-pfp {
  display: flex;
  align-items: center;
}

.cart-and-pfp {
  justify-content: flex-end;
  align-items: center;
}

nav {
  margin-left: 50px;
}

.nav-links {
  padding: 0 20px 50px 20px;
  margin-right: 10px;
}

.nav-links:hover {
  border-bottom: 3px solid var(--orange-bg);
  color: var(--dark-gray-blue);
}

.nav-menu,
.close-nav {
  display: none;
  position: fixed;
  width: 25px;
}

.active-btn-nav {
  display: block;
}

.hamburger-img {
  width: 25px;
  transition: all 0.2s ease-in-out;
}

.active-btn {
  display: block;
}

.pfp {
  margin-left: 50px;
  width: 40px;
}

.cart {
  position: relative;
}

.cart-box {
  opacity: 0;
  pointer-events: none;
  transition: all 0.25s ease-in-out;
  transform: translateY(200px);
  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
  background: var(--white);
  border-radius: 15px;
  width: 400px;
  position: absolute;
  top: -100px;
  left: -300px;
}

.cart-heading,
.cart-inside {
  padding: 20px 30px;
}

.cart-inside {
  border-top: 1px solid var(--light-grayish-blue);
}

.cart-box-in {
  display: flex;
  align-items: center;
  gap: 15px;
  margin-bottom: 30px;
}

.cart-img {
  width: 50px;
  border-radius: 5px;
}

.cart-description-box {
  color: var(--grayish-blue);
  font-size: 14px;
  font-weight: 600;
  line-height: 1.6;
}

.cart-total {
  color: var(--dark-blue);
}

.btn-empty-cart {
  margin-left: 10px;
}

.btn-checkout,
.btn-add-cart {
  padding: 15px 30px;
  text-align: center;
  font-weight: 600;
  font-size: 14px;
  background: var(--orange-bg);
  border-radius: 10px;
  transition: all 0.2s ease-in-out;
  border: 2px solid var(--orange-bg);
}

.btn-checkout {
  width: 100%;
}

.cart-active {
  opacity: 1;
  pointer-events: all;
}

.header-mobile {
  height: 100vh;
  width: 400px;
  background: var(--white);
  position: fixed;
  top: 90px;
  left: -90vw;
  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
  border-top-right-radius: 15px;
  border-bottom-right-radius: 15px;
  transition: all 0.25s ease-in-out;
}

.nav-mobile {
  display: flex;
  flex-direction: column;
  gap: 30px;
  padding-top: 100px;
}

.nav-link-mobile {
  padding: 0;
}

.mobile-active {
  left: 0;
}

main {
  width: 70vw;
  display: flex;
  padding-top: 100px;
}

.images {
  width: 50%;
  display: grid;
  grid-template-columns: repeat(4, 100px);
  grid-template-rows: 400px 100px;
  gap: 10px;
  grid-row-gap: 30px;
}

.main-img,
.thumbnail-img {
  border-radius: 10px;
  cursor: pointer;
  transition: all 0.25s ease-in-out;
}

.main-img {
  width: 400px;
  grid-column: 1 / 5;
  justify-self: center;
}

.thumbnail-img {
  width: 80px;
  justify-self: center;
}

.thumbnail-img:hover {
  opacity: 0.7;
}

.current-img {
  border: 2px solid var(--orange-bg);
  opacity: 0.6;
}

.product-info {
  width: 50%;
  padding-top: 50px;
}

.label {
  text-transform: uppercase;
  font-size: 12px;
  font-weight: 600;
  color: var(--dark-gray-blue);
  letter-spacing: 2px;
}

.product-heading {
  font-size: 38px;
  margin: 20px 0 30px 0;
}

.product-about {
  font-size: 18px;
  color: var(--dark-gray-blue);
  line-height: 1.2;
  margin-bottom: 20px;
}

.price {
  display: inline;
}

.off {
  background: var(--dark-blue);
  color: var(--white);
  font-weight: 600;
  padding: 10px;
  border-radius: 10px;
  margin-left: 15px;
  font-size: 10px;
}

.prev-price {
  margin-top: 5px;
  color: var(--grayish-blue);
  font-size: 14px;
  text-decoration: line-through;
}

.add-to-cart {
  display: flex;
  gap: 10px;
  margin-top: 50px;
  cursor: pointer;
}

.btn-add-cart {
  /* width: 300px; */
  display: flex;
  align-items: center;
  gap: 10px;
  justify-content: center;
}

.btn-add-cart:hover,
.btn-checkout:hover {
  background: none;
  font-size: 16px;
  color: var(--orange-bg);
  border: 2px solid var(--orange-bg);
}

.btn-add-cart-img {
  width: 15px;
}

.btn-add-cart:active,
.btn-checkout:active {
  background: var(--orange-bg);
  color: var(--white);
}

.product-quantity {
  background: var(--light-grayish-blue);
  padding: 15px 20px;
  border-radius: 10px;
  transition: all 0.25s ease-in-out;
}

.product-quantity:hover {
  background: var(--dark-blue);
  color: var(--white);
}

.btn-quantity {
  color: var(--orange-bg);
  font-size: 20px;
  transition: all 0.25s ease-in-out;
}

#quantity {
  pointer-events: none;
  width: 100px;
}

.overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.8);
  display: flex;
  justify-content: center;
  opacity: 0;
  pointer-events: none;
  transition: all 0.25s ease-in-out;
}

.overlay-img {
  width: 600px;
  border-radius: 10px;
}

.active-overlay {
  opacity: 1;
  pointer-events: all;
}

/* <!-- Implementing Hamburger Menu Now--> */

/* Responsiveness */
@media (max-width: 1800px) {
  header {
    width: 80vw;
  }
  main {
    width: 80vw;
  }
  .product-heading {
    font-size: 32px;
  }
  .product-about {
    font-size: 15px;
  }
}

@media (max-width: 1200px) {
  body {
    position: relative;
  }
  .logo-and-nav {
    flex-direction: row-reverse;
    width: 50%;
  }
  .cart-and-pfp {
    width: 50%;
  }
  .logo-img {
    justify-self: center;
  }
  .logo-and-nav {
    width: 80%;
  }
  nav {
    display: none;
  }
  .nav-menu {
    display: block;
  }
  header {
    justify-content: space-between;
    height: 90px;
    border-bottom: none;
  }
  main {
    flex-direction: column;
    padding-top: 50px;
  }
  .images {
    width: 100%;
    place-items: center;
    place-content: center;
    gap: 0;
    grid-row-gap: 0;
    grid-template-columns: 350px 100px;
    grid-template-rows: repeat(4, 100px);
  }
  .main-img {
    width: 350px;
    grid-row: 1 / 5;
  }
  .img-1 {
    grid-row: 1 / 2;
  }
  .img-2 {
    grid-row: 2 / 3;
  }
  .img-3 {
    grid-row: 3 / 4;
  }
  .img-4 {
    grid-row: 4 / 5;
  }
  .thumbnail-img {
    width: 70px;
  }
  .product-info {
    width: 100%;
    padding: 50px 0;
  }
  .product-heading {
    font-size: 28px;
    margin: 15px 0 25px 0;
  }
  .overlay-img {
    width: 400px;
    border-radius: 10px;
  }
}

@media (max-width: 600px) {
  header {
    height: 80px;
  }
  .header-mobile {
    width: 250px;
    top: 80px;
  }
  .cart-box {
    top: -150px;
    width: 350px;
    left: -280px;
  }
  .btn-checkout,
  .btn-add-cart {
    padding: 10px 30px;
  }
  .cart-description-box {
    font-size: 10px;
  }
  .product-quantity {
    padding: 10px 20px;
  }
  main {
    width: 90vw;
  }
  .logo-img {
    width: 100px;
  }
  .pfp {
    width: 25px;
    margin-left: 20px;
  }
  .cart-img-header {
    width: 15px;
  }
  .hamburger-img {
    width: 25px;
  }
  .images {
    grid-template-columns: repeat(4, 80px);
    grid-template-rows: 250px 80px;
    place-content: center;
    grid-row-gap: 15px;
  }
  .main-img {
    width: 250px;
    grid-row: 1 / 2;
    grid-column: 1 / 5;
    justify-self: center;
  }
  .img-1 {
    grid-column: 1 / 2;
    grid-row: 2 / 2;
  }
  .img-2 {
    grid-column: 2 / 3;
    grid-row: 2 / 2;
  }
  .img-3 {
    grid-column: 3 / 4;
    grid-row: 2 / 2;
  }
  .img-4 {
    grid-column: 4 / 5;
    grid-row: 2 / 2;
  }
  .thumbnail-img {
    width: 60px;
  }
  .add-to-cart {
    justify-content: center;
  }
  .product-heading {
    font-size: 24px;
    margin-bottom: 20px;
  }
  .product-about {
    font-size: 12px;
  }
  .add-to-cart {
    flex-direction: column;
    align-items: center;
  }
  #quantity {
    width: 150px;
  }
  .btn-add-cart {
    width: 250px;
  }
  .overlay-img {
    width: 250px;
    border-radius: 10px;
  }
}

@media (max-width: 400px) {
  .cart-box {
    left: -200px;
    width: 260px;
  }
}

@media (max-width: 350px) {
  .logo-img {
    width: 80px;
  }
}

